@@ -41,7 +41,7 @@ public class StoreAppender {
             Float.class, Float.TYPE, Long.class, Long.TYPE, Short.class,
             Short.TYPE, InetAddress.class };
 
-    private static int pos = 0;
+    private int pos = 0;
 
     /**
      * print the closing tag
@@ -315,12 +315,10 @@ public class StoreAppender {
      *
      * @param bean
      * @return an object from same class as bean parameter
-     * @throws InstantiationException
-     * @throws IllegalAccessException
+     * @throws ReflectiveOperationException Error creating a new instance
      */
-    public Object defaultInstance(Object bean) throws InstantiationException,
-            IllegalAccessException {
-        return bean.getClass().newInstance();
+    public Object defaultInstance(Object bean) throws ReflectiveOperationException {
+        return bean.getClass().getConstructor().newInstance();
     }
 
     /**
