@@ -56,8 +56,6 @@ import org.apache.tomcat.InstanceManager;
  */
 public class JspRuntimeLibrary {
 
-    private static final Log log = LogFactory.getLog(JspRuntimeLibrary.class);
-
     /**
      * Returns the value of the javax.servlet.error.exception request
      * attribute value, if present, otherwise the value of the
@@ -774,8 +772,7 @@ public class JspRuntimeLibrary {
         throws JasperException
     {
         try {
-            PropertyEditor pe =
-                (PropertyEditor)propertyEditorClass.newInstance();
+            PropertyEditor pe = (PropertyEditor)propertyEditorClass.getConstructor().newInstance();
             pe.setAsText(attrValue);
             return pe.getValue();
         } catch (Exception ex) {
@@ -984,6 +981,7 @@ public class JspRuntimeLibrary {
             tag.release();
         } catch (Throwable t) {
             ExceptionUtils.handleThrowable(t);
+            Log log = LogFactory.getLog(JspRuntimeLibrary.class);
             log.warn("Error processing release on tag instance of "
                     + tag.getClass().getName(), t);
         }
@@ -992,6 +990,7 @@ public class JspRuntimeLibrary {
         } catch (Exception e) {
             Throwable t = ExceptionUtils.unwrapInvocationTargetException(e);
             ExceptionUtils.handleThrowable(t);
+            Log log = LogFactory.getLog(JspRuntimeLibrary.class);
             log.warn("Error processing preDestroy on tag instance of "
                     + tag.getClass().getName(), t);
         }
